--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.2",
     "framer-motion": "^11.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
