--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@calcom/embed-react": "^1.5.2",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
