--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@calcom/embed-react": "^1.5.2",
     "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.2.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
